--- a/src/client/scss/style.scss
+++ b/src/client/scss/style.scss
@@ -1,4 +1,6 @@
 @import "../libraries/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "../libraries/font-awesome/css/font-awesome";
+// @import url("//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css");
 
 .word-finished{
   background-color: limegreen;
