--- a/src/client/scss/style.scss
+++ b/src/client/scss/style.scss
@@ -3,6 +3,7 @@
 // @import url("//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css");
 
 @import "./sidebar-nav";
+@import "./keyboard";
 
 .vertical-center {
   min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
