--- a/src/client/scss/style.scss
+++ b/src/client/scss/style.scss
@@ -3,6 +3,7 @@
 // @import url("//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css");
 
 @import "./sidebar-nav";
+@import "./leaderboard";
 
 .vertical-center {
   min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
@@ -12,18 +13,18 @@
   align-items: center;
 }
 
-.row-same-height {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  flex-wrap: wrap;
-}
+// .row-same-height {
+//   display: -webkit-box;
+//   display: -webkit-flex;
+//   display: -ms-flexbox;
+//   display: flex;
+//   flex-wrap: wrap;
+// }
 
-.force-column-height {
-  display: flex;
-  flex-direction: column;
-}
+// .force-column-height {
+//   display: flex;
+//   flex-direction: column;
+// }
 
 .word-finished{
   background-color: limegreen;
