--- a/src/client/scss/style.scss
+++ b/src/client/scss/style.scss
@@ -1,5 +1,6 @@
 @import "../libraries/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "../libraries/font-awesome/css/font-awesome";
+@import "../libraries/seiyria-bootstrap-slider/dist/css/bootstrap-slider";
 // @import url("//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css");
 
 @import "./sidebar-nav";
